Closed Bug 327867 Opened 19 years ago Closed 19 years ago

CopyOffscreenBits not called anymore in cairo builds

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: Biesinger, Assigned: Biesinger)

Details

Attachments

(1 file)

And it's the only caller of SetTarget, so I think we should remove the body of this function together with gfxContext::SetTarget.
Attached patch patchSplinter Review
Attachment #212429 - Flags: review?(vladimir)
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.9alpha
Attachment #212429 - Flags: review?(vladimir) → review+
Checking in src/thebes/nsThebesRenderingContext.cpp; /cvsroot/mozilla/gfx/src/thebes/nsThebesRenderingContext.cpp,v <-- nsThebesRenderingContext.cpp new revision: 1.18; previous revision: 1.17 done Checking in thebes/public/gfxContext.h; /cvsroot/mozilla/gfx/thebes/public/gfxContext.h,v <-- gfxContext.h new revision: 1.20; previous revision: 1.19 done Checking in thebes/src/gfxContext.cpp; /cvsroot/mozilla/gfx/thebes/src/gfxContext.cpp,v <-- gfxContext.cpp new revision: 1.20; previous revision: 1.19 done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: