Bug 327867 CopyOffscreenBits is not called in cairo builds, therefore SetTarget isn't either. Remove the latter function and the body of the former. r=vlad